--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mongoose": "^8.8.4",
     "mysql2": "^3.11.5",
     "nodemon": "^3.1.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.3"
   }
 }
